<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_mentor_editor"
    android:id="@+id/mentor_editor_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MentorEditorActivity"
    >

    <TextView
        android:id="@+id/mentorNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/mentor_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginTop="40dp" />

    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:autofillHints="@string/mentor_name"
        android:ems="8"
        android:hint="@string/mentor_name"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/mentorNameLabel"
        app:layout_constraintStart_toEndOf="@+id/mentorNameLabel" />

    <TextView
        android:id="@+id/phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/mentor_phone_label"
        android:text="@string/mentor_phone_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="@+id/mentorNameLabel"
        app:layout_constraintTop_toBottomOf="@+id/mentorNameLabel" />

    <EditText
        android:id="@+id/edit_text_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:inputType="textPersonName"
        android:text="@string/phone_number"
        android:autofillHints="@string/phone_number"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/phone_label"
        app:layout_constraintStart_toStartOf="@+id/edit_text_name"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_name" />

    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/mentor_email_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="@+id/phone_label"
        app:layout_constraintTop_toBottomOf="@+id/phone_label" />

    <EditText
        android:id="@+id/edit_email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:inputType="textPersonName"

        android:text="@string/email_address"
        app:layout_constraintBottom_toBottomOf="@+id/email_label"
        app:layout_constraintStart_toStartOf="@+id/edit_text_phone"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_phone" />

</androidx.constraintlayout.widget.ConstraintLayout>
